# TRAT

./: .env.example  Makefile  README.md  main.py  pyproject.toml  requirements.txt
docs/: CHANGELOG.md
examples/example/: module.py
resources/modules/example/: module.py
resources/modules/filesystem/: module.py
resources/modules/info_windows/: module.py
resources/modules/module/: module.py
resources/modules/system/: module.py
scripts/: build.bat
tests/utils/clsutils/: test_generators.py
tests/utils/tg/: test_parse_command.py  test_validate_arguments.py
trat/: __main__.py
trat/api/: __init__.py  filters.py  utils.py
trat/core/: __init__.py  bot.py  config.py  core.py  enums.py  exceptions.py  module.py  modules.py  utils.py
trat/core/bot/filters/: __init__.py  command.py
trat/core/bot/handlers/: __init__.py  commands.py  enums.py  modules.py  routers.py
trat/core/filters/: __init__.py  admin.py  command.py
trat/core/handlers/: __init__.py  commands.py  modules.py  routers.py
trat/utils/clsutils/: __init__.py  generators.py
trat/utils/imputils/: __init__.py  cls.py  module.py
trat/utils/modules/: __init__.py  constants.py  managers.py  modules.py  types.py
trat/utils/tg/: __init__.py  utils.py
