[tool.poetry]
name = "trat"
version = "0.0.1"
description = "TRAT is a powerful cross-platform RAT based on Telegram bot protocol."
authors = ["CrazyProger1 <crazyproger1@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
